--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,69 +2,221 @@
 owner: forwardemail # Your GitHub organization or username, where this repository lives
 repo: status.forwardemail.net # The name of this repository
 
+# NOTE: pending https://github.com/upptime/uptime-monitor/pull/231
+
 sites:
-  - name: forwardemail.net
+  - name: https://forwardemail.net (curl)
     url: https://forwardemail.net
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
-  # - name: web-vu-sj-ca (forwardemail.net - Vultr - San Jose, California, USA)
-  #   url: https://45.63.88.165
-  #   icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
-  #   __dangerous__disable_verify_host: true
-  # - name: web-do-am-nl (forwardemail.net - Digital Ocean - Amsterdam, Netherlands, Europe)
-  #   url: https://159.223.238.2
-  #   icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
-  #   __dangerous__disable_verify_host: true
-  - name: api.forwardemail.net
+
+  - name: forwardemail.net:443 (IPv4)
+    url: forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 443
+    check: "tcp-ping"
+  - name: forwardemail.net:443 (IPv6)
+    url: forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 443
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: forwardemail.net:80 (IPv4)
+    url: forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 80
+    check: "tcp-ping"
+  - name: forwardemail.net:80 (IPv6)
+    url: forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 80
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: https://api.forwardemail.net (curl)
     url: https://api.forwardemail.net
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
-  # - name: api-vu-sj-ca (api.forwardemail.net - Vultr - San Jose, California, USA)
-  #   url: https://149.28.198.68
-  #   icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
-  #   __dangerous__disable_verify_host: true
-  # - name: api-do-am-nl (api.forwardemail.net - Digital Ocean - Amsterdam, Netherlands, Europe)
-  #   url: https://164.92.213.75
-  #   icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
-  #   __dangerous__disable_verify_host: true
-  - name: smtp.forwardemail.net (TLS)
+
+  - name: api.forwardemail.net:443 (IPv4)
+    url: https://api.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 443
+    check: "tcp-ping"
+  - name: api.forwardemail.net:443 (IPv6)
+    url: https://api.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 443
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: api.forwardemail.net:80 (IPv4)
+    url: api.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 80
+    check: "tcp-ping"
+  - name: api.forwardemail.net:80 (IPv6)
+    url: api.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 80
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: smtp.forwardemail.net:587 (IPv4)
     url: smtp.forwardemail.net
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 587
     check: "tcp-ping"
-  - name: smtp.forwardemail.net (SSL)
+  - name: smtp.forwardemail.net:587 (IPv6)
+    url: smtp.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 587
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: smtp.forwardemail.net:2587 (IPv4)
+    url: smtp.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 2587
+    check: "tcp-ping"
+  - name: smtp.forwardemail.net:2587 (IPv6)
+    url: smtp.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 2587
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: smtp.forwardemail.net:465 (IPv4)
     url: smtp.forwardemail.net
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 465
     check: "tcp-ping"
-  - name: imap.forwardemail.net (TLS)
+  - name: smtp.forwardemail.net:465 (IPv6)
+    url: smtp.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 465
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: smtp.forwardemail.net:2465 (IPv4)
+    url: smtp.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 2465
+    check: "tcp-ping"
+  - name: smtp.forwardemail.net:2465 (IPv6)
+    url: smtp.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 2465
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: smtp.forwardemail.net:25 (IPv4)
+    url: smtp.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 25
+    check: "tcp-ping"
+  - name: smtp.forwardemail.net:25 (IPv6)
+    url: smtp.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 25
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: smtp.forwardemail.net:2525 (IPv4)
+    url: smtp.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 2525
+    check: "tcp-ping"
+  - name: smtp.forwardemail.net:2525 (IPv6)
+    url: smtp.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 2525
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: imap.forwardemail.net:993 (IPv4)
     url: imap.forwardemail.net
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 993
     check: "tcp-ping"
-  - name: pop3.forwardemail.net (TLS)
+  - name: imap.forwardemail.net:993 (IPv6)
+    url: imap.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 993
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: imap.forwardemail.net:2993 (IPv4)
+    url: imap.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 2993
+    check: "tcp-ping"
+  - name: imap.forwardemail.net:2993 (IPv6)
+    url: imap.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 2993
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: pop3.forwardemail.net:995 (IPv4)
     url: pop3.forwardemail.net
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 995
     check: "tcp-ping"
-  - name: mx1.forwardemail.net
+  - name: pop3.forwardemail.net:995 (IPv6)
+    url: pop3.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 995
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: pop3.forwardemail.net:2995 (IPv4)
+    url: pop3.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 2995
+    check: "tcp-ping"
+  - name: pop3.forwardemail.net:2995 (IPv6)
+    url: pop3.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 2995
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: mx1.forwardemail.net:25 (IPv4)
     url: mx1.forwardemail.net
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 25
     check: "tcp-ping"
-  - name: mx2.forwardemail.net
+  - name: mx1.forwardemail.net:25 (IPv6)
+    url: mx1.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 25
+    check: "tcp-ping"
+    ipv6: true
+
+  - name: mx2.forwardemail.net:25 (IPv4)
     url: mx2.forwardemail.net
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 25
     check: "tcp-ping"
+  - name: mx2.forwardemail.net:25 (IPv6)
+    url: mx2.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 25
+    check: "tcp-ping"
+    ipv6: true
+
   - name: bree.forwardemail.net
     url: bree.forwardemail.net
     icon: https://raw.githubusercontent.com/breejs/bree/master/favicon.ico
     port: 22
     check: "tcp-ping"
+
   - name: sqlite.forwardemail.net
     url: sqlite.forwardemail.net
     icon: https://sqlite.org/favicon.ico
     port: 22
     check: "tcp-ping"
+
   # we cannot test these because they do not allow ping on managed dbs and ip-restricted access list only
   # - name: mongo
   #   url: $MONGO_HOST
