--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,8 +2,6 @@
 owner: forwardemail # Your GitHub organization or username, where this repository lives
 repo: status.forwardemail.net # The name of this repository
 
-# NOTE: pending https://github.com/upptime/uptime-monitor/pull/231
-
 sites:
   - name: https://forwardemail.net (curl)
     url: https://forwardemail.net
@@ -19,7 +17,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 443
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: forwardemail.net:80 (IPv4)
     url: forwardemail.net
@@ -31,7 +29,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 80
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: https://api.forwardemail.net (curl)
     url: https://api.forwardemail.net
@@ -47,7 +45,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 443
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: api.forwardemail.net:80 (IPv4)
     url: api.forwardemail.net
@@ -59,7 +57,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 80
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: smtp.forwardemail.net:587 (IPv4)
     url: smtp.forwardemail.net
@@ -71,7 +69,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 587
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: smtp.forwardemail.net:2587 (IPv4)
     url: smtp.forwardemail.net
@@ -83,7 +81,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 2587
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: smtp.forwardemail.net:465 (IPv4)
     url: smtp.forwardemail.net
@@ -95,7 +93,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 465
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: smtp.forwardemail.net:2465 (IPv4)
     url: smtp.forwardemail.net
@@ -107,7 +105,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 2465
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: smtp.forwardemail.net:25 (IPv4)
     url: smtp.forwardemail.net
@@ -119,7 +117,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 25
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: smtp.forwardemail.net:2525 (IPv4)
     url: smtp.forwardemail.net
@@ -131,7 +129,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 2525
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: imap.forwardemail.net:993 (IPv4)
     url: imap.forwardemail.net
@@ -143,7 +141,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 993
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: imap.forwardemail.net:2993 (IPv4)
     url: imap.forwardemail.net
@@ -155,7 +153,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 2993
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: pop3.forwardemail.net:995 (IPv4)
     url: pop3.forwardemail.net
@@ -167,7 +165,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 995
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: pop3.forwardemail.net:2995 (IPv4)
     url: pop3.forwardemail.net
@@ -179,7 +177,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 2995
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: mx1.forwardemail.net:25 (IPv4)
     url: mx1.forwardemail.net
@@ -191,7 +189,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 25
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: mx2.forwardemail.net:25 (IPv4)
     url: mx2.forwardemail.net
@@ -203,7 +201,7 @@ sites:
     icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
     port: 25
     check: "tcp-ping"
-    ipv6: false
+    ipv6: true
 
   - name: bree.forwardemail.net
     url: bree.forwardemail.net
