--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -203,6 +203,34 @@ sites:
     check: "tcp-ping"
     ipv6: false
 
+  - name: https://caldav.forwardemail.net (curl)
+    url: https://caldav.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+
+  - name: caldav.forwardemail.net:443 (IPv4)
+    url: caldav.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 443
+    check: "tcp-ping"
+  - name: caldav.forwardemail.net:443 (IPv6)
+    url: caldav.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 443
+    check: "tcp-ping"
+    ipv6: false
+
+  - name: caldav.forwardemail.net:80 (IPv4)
+    url: caldav.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 80
+    check: "tcp-ping"
+  - name: caldav.forwardemail.net:80 (IPv6)
+    url: caldav.forwardemail.net
+    icon: https://raw.githubusercontent.com/forwardemail/forwardemail.net/master/assets/img/favicon.ico
+    port: 80
+    check: "tcp-ping"
+    ipv6: false
+
   - name: bree.forwardemail.net
     url: bree.forwardemail.net
     icon: https://raw.githubusercontent.com/breejs/bree/master/favicon.ico
